@@ -37,7 +37,7 @@
 
 #include <string.h>
 
-static const uint16_t FIRMWARE_VERSION = 0x062E;
+static const uint16_t FIRMWARE_VERSION = 0x062F;
 
 // Optional static config
 extern uint8_t* __fixed_config;
